MAJOR UPDATE: 1. the software can now handle both triangles and quadrangles p=1 2. the stress recoveries routines are now splitted in: GP, nodes, avarage, vm 3. an example "triangle.jl" with its geometries has been added to test the mixture of triangles and quadrangles 4. Plots of all quantities works for both triangles and quadrangles 5. README and Project files have been UPDATE
BE CAREFUL: updating to p=2 for triangles can be not so simple because
of the triangular domain and the gauss point integration

--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
